gotta update LDLib and dump or update registrate